welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:7: error: value || is not a member of Int
} else if 	(d==10 && (e=10 || f==10) ) {
                                ^